# system-design-lab

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  run_server.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: projects.py  recommendations.py  reports.py  runs.py  scenarios.py
backend/app/core/: config.py  database.py  orchestrator.py  policies.py
backend/app/models/: contracts.py
backend/app/services/: design_generator.py  metrics.py  recommendation_engine.py  run_manager.py  sandbox.py
backend/tests/: test_health.py
docs/: architecture.md  implementation-roadmap.md  requirements.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/layout/: AppShell.tsx
frontend/src/features/recommendations/: RecommendationsPanel.tsx
frontend/src/features/runs/: RunDashboard.tsx  runEvents.ts
frontend/src/features/scenarios/: ScenarioBuilder.tsx  scenarioEvents.ts
scripts/: dev.ps1  dev.sh
shared/: README.md
shared/contracts/: openapi-notes.md
shared/examples/: run-create-request.example.json
shared/schemas/: metric-aggregate-event.schema.json  recommendation.schema.json  run-create-request.schema.json
